@@ -128,6 +128,7 @@ Version 1.4 (X/X/XXX)
  
  Accounts 
   * Fixed setting a global user icon. Previously, if you didn't have an account icon set but did set a global one, you would have no icon.
+  * Changed behavior for account options: a lot were only changing when reconnecting, now all that are able to (i.e., non-connect options) take affect immediately.
 
  Bonjour
   * Bonjour accounts now disconnect if we receive an error message.
